--- a/src/main/resources/templates/oembed.html
+++ b/src/main/resources/templates/oembed.html
@@ -6,10 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Oembed Test Site</title>
 </head>
-<link rel="stylesheet" href="css/home.css" type="text/css" />
-  <script type="text/javascript" src="js/home.js" ></script>
+<link rel="stylesheet" href="css/oembed.css" type="text/css" />
+  <script type="text/javascript" src="js/oembed.js" ></script>
   <body>
     <div class="container">
+      <div th:replace="/fragments/nav.html :: fragment-nav"></div>
       <header>
         <div id="title">oEmbed Test</div>
         
