--- a/src/main/resources/templates/sign/signInForm.html
+++ b/src/main/resources/templates/sign/signInForm.html
@@ -4,15 +4,22 @@
     <title>Mr Choi</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
+  <link rel="stylesheet" href="css/signInForm.css" />
   <body>
     <div class="container">
       <!-- 헤더 -->
       <div th:replace="/fragments/nav.html :: fragment-nav"></div>
-      <div th:if="${session.log == null}">
-        <a href="signInForm">로그인폼</a>
-      </div>
+      <!-- 로그인 폼 -->
+      <form method="post" action="signIn">
+        <label for="id">아이디</label>
+        <input type="text" name="id" id="id" />
+        <br />
+        <label for="pwd">비밀번호</label>
+        <input type="password" name="pwd" id="pwd" />
+        <br />
+        <input type="submit" value="로그인" />
+      </form>
       <div th:if="${session.log == 'Y'}">
-        <a href="logout">로그아웃</a>
         <span th:text="${session.logName}"></span>
       </div>
     </div>
