--- a/src/main/resources/templates/oembed.html
+++ b/src/main/resources/templates/oembed.html
@@ -10,7 +10,7 @@
   <script type="text/javascript" src="js/oembed.js" ></script>
   <body>
     <div class="container">
-      <div th:replace="/fragments/nav.html :: fragment-nav"></div>
+      <div th:replace="fragments/nav.html :: fragment-nav"></div>
       <header>
         <div id="title">oEmbed Test</div>
         
