--- a/src/main/resources/templates/sign/signInForm.html
+++ b/src/main/resources/templates/sign/signInForm.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <!-- 헤더 -->
-      <div th:replace="/fragments/nav.html :: fragment-nav"></div>
+      <div th:replace="fragments/nav.html :: fragment-nav"></div>
       <!-- 로그인 폼 -->
       <form method="post" action="signIn">
         <label for="id">아이디</label>
