--- a/src/main/resources/templates/oembed.html
+++ b/src/main/resources/templates/oembed.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Oembed Test Site</title>
 </head>
-<link rel="stylesheet" href="css/oembed.css" type="text/css" />
-  <script type="text/javascript" src="js/oembed.js" ></script>
+<link rel="stylesheet" href="/css/oembed.css" type="text/css" />
+  <script type="text/javascript" src="/js/oembed.js" ></script>
   <body>
     <div class="container">
       <div th:replace="fragments/nav.html :: fragment-nav"></div>
