--- a/src/main/resources/templates/sign/signInForm.html
+++ b/src/main/resources/templates/sign/signInForm.html
@@ -10,7 +10,7 @@
       <!-- 헤더 -->
       <div th:replace="fragments/nav.html :: fragment-nav"></div>
       <!-- 로그인 폼 -->
-      <form method="post" action="signIn">
+      <form method="post" action="sign-in">
         <label for="id">아이디</label>
         <input type="text" name="id" id="id" />
         <br />
