--- a/src/main/resources/templates/board/edit.html
+++ b/src/main/resources/templates/board/edit.html
@@ -5,20 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <link rel="stylesheet" href="/css/write.css" />
-  <script type="text/javascript" src="/js/write.js"></script>
+  <link rel="stylesheet" type="text/css" href="/css/edit.css" />
   <body>
     <!-- 헤더 -->
     <div th:replace="fragments/nav.html :: fragment-nav"></div>
+
     <div id="container">
       <form method="POST" action="/board">
+        <input type="hidden" name="_method" value="PUT" />
+        <input type="hidden" th:value="${editList.no}" id="no" name="no" />
         <div>제목</div>
-        <input type="text" size="100" id="title" name="title" />
+        <input
+          type="text"
+          size="100"
+          id="title"
+          name="title"
+          th:value="${editList.title}"
+        />
 
         <div>글내용</div>
-        <textarea rows="30" id="content" name="content"></textarea>
+        <textarea
+          rows="30"
+          id="content"
+          name="content"
+          th:text="${editList.content}"
+        ></textarea>
         <div id="btnContainer">
-          <input type="submit" value="글등록" />
+          <input type="submit" value="글수정" />
           <input type="button" value="취소" onclick="cancel()" />
         </div>
       </form>
