--- a/src/main/resources/templates/board/failed.html
+++ b/src/main/resources/templates/board/failed.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <script>
-    alert("글등록에 실패하였습니다.");
+    alert("글등록&수정에 실패하였습니다.");
     history.back();
   </script>
   <body></body>
